demo-app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
  namespace: app-demo
  annotations:
    argocd.argoproj.io/sync-wave: "1"   # 👈 se aplica después del Ingress
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app
  strategy:
    canary:
      canaryService: app-canary
      stableService: app-stable
      trafficRouting:
        nginx:
          stableIngress: app-ingress   # 👈 Ingress que maneja el tráfico
      steps:
        - setWeight: 20
        - pause: { duration: 10 }   # espera 10s
        - setWeight: 50
        - pause: { duration: 30 }   # espera 30s
        - setWeight: 100
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - containerPort: 80
