demo-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
    rollouts-pod-template-hash: stable
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
    rollouts-pod-template-hash: canary
