demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "0"   # 👈 se aplica primero en ArgoCD
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-stable
                port:
                  number: 80
